--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,1 +1,11 @@
 events#index page
+
+<h1>EventOnly EVENTS</h1>
+
+<% @events.each do |current_event| %>
+  <%= render 'single_event', event: current_event %>
+<% end %>
+
+<p>
+  <%= link_to 'New Event', new_event_path %>
+</p>
